--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
         <div class="column left">
             <img src="/images/portrait.jpg" class="portrait" alt="Portrait" />
         </div>
-        <div class="column right"><h1>Thanks for visiting!</h1><h2>I am Jake Silver.</h2>
-            <p>I am a software developer living in Chicago, IL currently working on the Venmo mobile app. Outside of work, I can be found reading, cooking or exploring. I am currently passionate about mobility, in the personal health sense and how people can get around a place.</p>
+        <div class="column right"><h1>Hello.</h1><h2>I am Jake Silver.</h2>
+            <p>I am a software developer living in Chicago, IL currently working on the Venmo mobile app. Outside of work, I can be found reading, cooking or experiencing the world. I am currently passionate about mobility -- both in the personal health sense and how people can get around a place.</p>
 
             <div class="links"><a rel="me" href="mailto:contact@silverjake.com" title="E-mail">
                         <span class="fas fa-envelope"></span>
